# evm-events-indexer

./: .gitignore  Cargo.toml  README.md
examples/: example_config.yaml
migrations/01-create_transfer_event_table/: down.sql  up.sql
migrations/02-add_update_trigger_for_updated/: down.sql  up.sql
migrations/03-add_indeces/: down.sql  up.sql
src/: config.rs  errors.rs  event.rs  indexer.rs  lib.rs  log_consumer.rs  main.rs  transfer_event.rs
src/cli/: commands.rs  config.rs
src/db/: init.rs  mod.rs  models.rs  query_filters.rs  repository.rs  schema.rs  transfer_repository.rs
src/interfaces/: consume_event.rs  mod.rs
tests/integration_tests/: main.rs
tests/integration_tests/common/: fill_tables.rs  mod.rs
tests/integration_tests/db/: repository_tests.rs
tests/integration_tests/indexer/: logs.rs  mod.rs
