[package]
name = "logger_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }
async-trait = "0.1.88"
hex = "0.4.3"
log = { version = "0.4.27" }
env_logger = { version = "0.11.8" }
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.43", features = ["derive"] }
twelf = { version = "0.15.0", default-features = false, features = [
    "yaml",
    "env",
] }
diesel = { version = "2.2.12", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
    "numeric",
] }
diesel_migrations = { version = "2.2.0" }
chrono = { version = "0.4.41" }
r2d2_sqlite = { version = "0.31.0" }
r2d2 = { version = "0.8.10" }
include_dir = { version = "0.7.4" }

[lints.clippy]
uninlined_format_args = "allow"
